fix(search-bar): button disabled + contrasted

--- a/packages-new/components/button/src/components/osds-button/osds-button.scss
+++ b/packages-new/components/button/src/components/osds-button/osds-button.scss
@@ -74,8 +74,9 @@
 }
 
 :host([disabled]) {
-  cursor: not-allowed;
-  pointer-events: none;
+  @include osds-button-on-main-element() {
+    cursor: not-allowed;
+  }
 }
 
 :host([inline]) {
